<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header-->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_4dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_8dp"
                android:stretchColumns="4">

                <TableRow
                    android:background="@color/colorAccent"
                    android:padding="@dimen/material_8dp">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/txt_movable"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/txt_quantity_t2"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/txt_price"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.35"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/txt_total"
                        android:textColor="@android:color/white" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- Footer -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/material_4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/material_16dp"
                android:stretchColumns="2">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="left"
                        android:text="@string/txt_total_amount"
                        android:textColor="@color/md_white_1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="left"
                        android:text="@string/txt_total_zero"
                        android:textColor="@color/md_black_1000" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- Content -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewPortfoy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/material_4dp"
                android:scrollbars="vertical" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>