<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/material_64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"

                    android:orientation="vertical"
                    android:showDividers="end">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/material_16dp"
                        android:fontFamily="casual"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/material_16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/material_24dp"
                        android:layout_height="@dimen/material_24dp"
                        android:tint="@color/colorAccent"
                        app:srcCompat="@drawable/ic_person_outline_black_24dp" />

                    <EditText
                        android:id="@+id/editTextUsername"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/material_16dp"
                        android:layout_marginRight="@dimen/material_16dp"
                        android:hint="@string/hint_username"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/material_16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/material_24dp"
                        android:layout_height="@dimen/material_24dp"
                        android:tint="@color/colorAccent"
                        app:srcCompat="@drawable/ic_lock_black_24dp" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/material_16dp"
                        android:layout_marginRight="@dimen/material_16dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/material_16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/material_8dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_button"
                        android:elevation="4dp"
                        android:text="@string/btn_login"
                        android:textColor="#fff"
                        android:textSize="@dimen/button_text_size" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>